force-app/main/default/objects/Collaborate_Support_Team__mdt/Collaborate_Support_Team__mdt.object-meta.xml
<CustomObject>
    <label>Collaborate Support Team</label>
    <pluralLabel>Collaborate Support Teams</pluralLabel>
</CustomObject>