force-app/main/default/objects/Collaborate_Support_Team__mdt/fields/buttonId__c.field-meta.xml
<CustomField>
    <fullName>buttonId__c</fullName>
    <label>buttonId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>