force-app/main/default/objects/Collaborate_Support_Team__mdt/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFTER HOURS ENGLISH</fullName>
                <default>true</default>
                <label>AFTER HOURS ENGLISH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>