force-app/main/default/objects/Collaborate_Support_Team__mdt/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POLICY QUESTION</fullName>
                <default>true</default>
                <label>POLICY QUESTION</label>
            </value>
            <value>
                <fullName>Tag Missing/Order Missing</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>