force-app/main/default/objects/Collaborate_Support_Team__mdt/fields/Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Support_Team__c</fullName>
    <label>Support Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CENTRALIZED TECH EXPERT</fullName>
                <default>true</default>
                <label>CENTRALIZED TECH EXPERT</label>
            </value>
            <value>
                <fullName>CONSUMER EXCHANGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>